# chris

./: .gitignore  AGENTS.md  CLAUDE.md  CONTENT.md  Cargo.toml  README.md  justfile  leptosfmt.toml  pnpm-lock.yaml  wrangler.toml
.agents/skills/deploy/: SKILL.md
.claude/: settings.json
.claude/skills/create-pr/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yml
app/: Cargo.toml  build.rs
app/src/: about.rs  app.rs  lib.rs  listing.rs  post.rs  render.rs
app/src/components/: back_link.rs  callout.rs  classed.rs  code_block.rs  contacts.rs  copy_button.rs  counter.rs  footer.rs  header.rs  heading.rs  konami.rs  mod.rs  not_found.rs  page.rs  post_list.rs  post_meta.rs  section_label.rs  tag_filter.rs  tag_pill.rs  tag_row.rs  theme_toggle.rs  writing_index.rs
app/src/components/blog/: callout.rs  counter.rs  mod.rs
app/style/: about.css  callout.css  chrome.css  code-block.css  listing.css  main.css  post.css  tags.css
app/tests/: about.rs  chrome.rs  colocated.rs  design.rs  listing.rs  render.rs  shell.rs  stylesheet_contract.rs  theme.rs
app/tests/common/: mod.rs
apps/web/: package.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/web/src/components/: header.tsx
apps/web/src/core/functions/: posts.ts
apps/web/src/routes/: __root.tsx  index.tsx  posts.$postId.tsx  posts.tsx  posts_.$postId.deep.tsx
apps/web/src/styles/: app.css
apps/web/src/utils/: posts.tsx
content/blog/ci-code-path/: components.rs  index.mdx
content/blog/components-demo/: index.mdx
content/blog/hello-world/: big-hello-world.tsx  index.mdx
content/blog/kitchen-sink/: index.mdx
crates/authn/: Cargo.toml
crates/authn/src/: lib.rs
crates/blog-cli/: Cargo.toml
crates/blog-cli/src/: kv.rs  lib.rs  main.rs
crates/blog-cli/tests/: check.rs
crates/blog-cli/tests/fixtures/valid/content/blog/first-post/: index.mdx
crates/content/: Cargo.toml
crates/content-ast/: Cargo.toml
crates/content-ast/src/: lib.rs
crates/content-ast/tests/: schema.rs
crates/content-parser/: Cargo.toml
crates/content-parser/examples/: mdx2json.rs
crates/content-parser/fixtures/invalid/: import-export.mdx  non-literal-props.mdx
crates/content-parser/fixtures/valid/: html-passthrough.mdx  images.json  images.mdx  links.json  links.mdx
crates/content-parser/src/: lib.rs
crates/content-parser/tests/: diagnostics.rs  golden.rs  parse.rs  validate.rs
crates/content/fixtures/: old-schema-version.json
crates/content/fixtures/invalid/: expressions.mdx  malformed-frontmatter.mdx
crates/content/fixtures/valid/: blockquotes.json  blockquotes.mdx  code-fences.json  code-fences.mdx  components.json  components.mdx  frontmatter.json  frontmatter.mdx  headings.json  headings.mdx  html-passthrough.json  inline.json  inline.mdx  lists.json  lists.mdx  paragraphs.json  paragraphs.mdx
crates/content/src/: derived.rs  lib.rs  manifest.rs  parse.rs  routes.rs
crates/content/tests/: derived.rs  diagnostics.rs  golden.rs  parse.rs  schema.rs  validate.rs
crates/publish/: Cargo.toml
crates/publish-core/: Cargo.toml
crates/publish-core/src/: lib.rs
crates/publish-core/tests/: plan.rs
crates/publish/src/: lib.rs
crates/publish/tests/: plan.rs  snapshot.rs
crates/registry/: Cargo.toml
crates/registry-macro/: Cargo.toml
crates/registry-macro/src/: lib.rs
crates/registry/src/: dispatch.rs  lib.rs
crates/registry/tests/: compile_fail.rs  dispatch.rs
crates/registry/tests/compile_fail/: attr_args.rs  attr_args.stderr  below_component.rs  below_component.stderr  children_type.rs  children_type.stderr  generics.rs  generics.stderr  pattern_prop.rs  pattern_prop.stderr  self_receiver.rs  self_receiver.stderr  unsupported_prop_type.rs  unsupported_prop_type.stderr
crates/xtask/: Cargo.toml
crates/xtask/src/: lib.rs  main.rs
crates/xtask/tests/: check.rs  index.rs  plan.rs
crates/xtask/tests/fixtures/invalid/content/blog/bad-component/: index.mdx
crates/xtask/tests/fixtures/invalid/content/blog/bad-date/: index.mdx
crates/xtask/tests/fixtures/invalid/content/blog/no-index/: notes.txt
crates/xtask/tests/fixtures/valid/content/blog/second-post/: index.mdx
docs/: DOCS_INDEX.md
docs/adrs/: adr-0001-runtime-content-pipeline.md  adr-0002-structured-ast-ir.md  adr-0003-mdx-subset-authoring.md  adr-0004-colocated-components-hybrid.md  adr-0005-macro-registry-manifest.md  adr-0006-two-worker-topology.md  adr-0007-publish-orchestration.md  adr-0008-cache-and-purge.md  adr-0009-snapshot-publish-coordinator.md  adr-0010-ci-reconcile-drop-worker.md  adr-0011-client-side-theming.md  adr-0012-tags-in-page-filter.md
docs/guides/: pipeline-deploy.md  publishing.md  tracer-bullet-demo.md
docs/prds/: prd-design-system-migration.md  prd-leptos-workers-blog-v1.md
workers/bundler/: IMPLEMENTATION_PLAN.md  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/bundler/container/: Dockerfile  package.json
workers/bundler/container/src/: index.ts
workers/bundler/src/: bundler.ts  github.ts  index.ts  octokit.ts
workers/orchestrator/: package.json  worker-configuration.d.ts  wrangler.jsonc
workers/orchestrator/src/: index.ts  webhooks.ts
workers/pipeline/: Cargo.toml  wrangler.toml
workers/pipeline/src/: coordinator.rs  lib.rs  net.rs  server.rs
workers/pipeline/tests/: logic.rs
workers/pipeline/tests/fixtures/: push.json
workers/resolver/: PLAN.md  package.json  worker-configuration.d.ts  wrangler.jsonc
workers/resolver/src/: index.ts
workers/site/: Cargo.toml
workers/site/src/: auth.rs  cache.rs  feeds.rs  lib.rs  main.rs  purge.rs  redirects.rs
workers/site/tests/: auth.rs  cache.rs  feeds.rs  redirects.rs
