[workspace]
resolver = "2"
members = [
    "app",
    "crates/content-ast",
    "crates/content-parser",
    "crates/blog-cli",
    "crates/publish-core",
    "crates/registry",
    "crates/registry-macro",
    "workers/pipeline",
    "workers/site",
]

[workspace.dependencies]
app = { path = "app" }
content-ast = { path = "crates/content-ast" }
content-parser = { path = "crates/content-parser" }
publish-core = { path = "crates/publish-core" }
registry = { path = "crates/registry" }
registry-macro = { path = "crates/registry-macro" }
axum = { version = "0.8", default-features = false }
hmac = "0.12"
inventory = "0.3"
markdown = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
# Both getrandom majors are in the graph; each needs `wasm_js` (plus the
# getrandom_backend cfg set in the build command) to compile for wasm32.
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
leptos = { version = "0.8", features = ["islands"] }
leptos_axum = { version = "0.8", default-features = false, features = ["wasm"] }
leptos_meta = "0.8"
leptos_router = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tower-service = "0.3"
wasm-bindgen = "0.2"
# Pinned: 0.8.4+ pulls wasm-streams 0.6 alongside server_fn's 0.5 and fat LTO
# fails on duplicate wasm-bindgen shims. Unpin once server_fn catches up.
worker = { version = "=0.8.3", features = ["http", "axum"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
# No `strip = true`: it breaks wasm-bindgen (cloudflare/workers-rs#1014);
# wasm-opt strips after bindgen instead.

[[workspace.metadata.leptos]]
name = "chris"
bin-package = "site"
lib-package = "app"
# Must match `output_name` in the justfile (embedded via LEPTOS_OUTPUT_NAME).
output-name = "chris"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "app/style/main.css"
assets-dir = "app/assets"
site-addr = "127.0.0.1:8787"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
# The "server" artifact is wasm, not a native binary.
wasm-validation = false
