[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
content = { workspace = true }
getrandom = { workspace = true }
getrandom03 = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
registry = { workspace = true, features = ["dispatch"] }
serde = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
content = { workspace = true, features = ["parse"] }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
