[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
content = { workspace = true }
getrandom = { workspace = true }
getrandom03 = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
registry = { workspace = true, features = ["dispatch"] }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "Clipboard",
    "MediaQueryList",
    "Navigator",
    "NodeList",
    "Storage",
] }

[dev-dependencies]
content = { workspace = true, features = ["parse"] }
# The SSR test harness builds the same shared-context root owner leptos_axum
# does; version tracks leptos's own hydration_context dependency.
hydration_context = "0.3"

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
