[package]
name = "blog-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
# Linked for its inventory registrations: the CLI validates against the
# real deployed vocabulary, not a hand-maintained copy.
app = { workspace = true }
clap = { version = "4", features = ["derive"] }
content-ast = { workspace = true }
content-parser = { workspace = true }
publish-core = { workspace = true }
registry = { workspace = true, features = ["dispatch"] }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "3", features = ["json"] }
