[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
content = { workspace = true }
# Dispatch needs leptos. Today every consumer (`app`) enables it; the gate
# stays (AGENTS.md pins this shape) so a future manifest-only consumer can
# link this crate's `::registry` re-exports leptos-free.
inventory = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
registry-macro = { workspace = true, optional = true }

[features]
dispatch = ["dep:inventory", "dep:leptos", "dep:registry-macro"]

[dev-dependencies]
leptos = { workspace = true, features = ["ssr"] }
serde_json = { workspace = true }
trybuild = "1"
