[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Linked for its inventory registrations: `check` and `plan` validate against
# the real deployed vocabulary via `app::manifest()`.
app = { workspace = true }
content = { workspace = true, features = ["parse"] }
publish = { workspace = true }
serde_json = { workspace = true }
