[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linked for its inventory registrations (via app::manifest): publish
# validation runs against the real deployed vocabulary.
app = { workspace = true }
content = { workspace = true, features = ["parse"] }
hmac = { workspace = true }
publish = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
worker = { workspace = true, optional = true }

# The shim is wasm-only; native builds and tests (`cargo test -p pipeline`)
# compile the pure decision logic without it.
[features]
worker = ["dep:worker"]
