[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linked for its inventory registrations (via app::manifest): publish
# validation runs against the real deployed vocabulary.
app = { workspace = true }
content = { workspace = true, features = ["parse"] }
futures-util = { workspace = true, optional = true }
hmac = { workspace = true }
publish = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
# The #[durable_object] macro's generated bindgen glue references bare
# `wasm_bindgen::` paths, so the crate hosting a Durable Object must depend
# on wasm-bindgen directly.
wasm-bindgen = { workspace = true, optional = true }
worker = { workspace = true, optional = true }

# The shim is wasm-only; native builds and tests (`cargo test -p pipeline`)
# compile the pure decision logic without it.
[features]
worker = ["dep:worker", "dep:wasm-bindgen", "dep:futures-util"]
