[package]
name = "site"
version = "0.1.0"
edition = "2021"

# rlib alongside cdylib so the native test harness (tests/feeds.rs) can link
# the pure feed/sitemap module; worker-build keeps targeting the cdylib.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { workspace = true, features = ["ssr"], optional = true }
axum = { workspace = true, optional = true }
# Ungated: the feeds module renders from `IndexEntry` natively (content's
# is pure serde types, fine on the host target).
content = { workspace = true }
getrandom = { workspace = true }
getrandom03 = { workspace = true }
leptos = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
worker = { workspace = true, optional = true }

# Gated behind `ssr` so a host-side `cargo check --workspace` compiles this
# crate to an empty lib instead of building wasm-only deps for native.
[features]
ssr = [
  "dep:app",
  "dep:axum",
  "dep:leptos",
  "dep:leptos_axum",
  "dep:serde_json",
  "dep:tower-service",
  "dep:worker",
  "leptos/ssr",
]
